# webbase

./: .gitignore  .justfile  Cargo.toml
src/: client.rs  common.rs  db_datatime.rs  db_password.rs  idmlogin.rs  keycenter.rs  lib.rs  mysql.rs  permission.rs  rbac.rs  redis.rs  redisfred.rs  response.rs  time_util.rs  token.rs  token_rsa.rs
src/influx/: influxclient.rs  mod.rs  sys_status.rs
src/kafka/: consumer.rs  producer.rs
src/sysinfo/: linux.rs  macos.rs  mod.rs  windows.rs
test/: rsa_private.key  rsa_public.key
