[package]
name = "common"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["AsEuler <aseuler@outlook.com>"]
publish = false

[dependencies]
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }
time = { workspace = true, features = ["macros"] }
sea-orm = { workspace = true, features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
] }
fred = { workspace = true }
redis = { workspace = true, features = ["tokio-rustls-comp", "json"] }
redlock = { workspace = true }

futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
actix-web = { workspace = true }
actix-http = { workspace = true }
regex = { workspace = true }
dashmap = { workspace = true }
directories = { workspace = true }
sysinfo = { workspace = true }
whoami = { workspace = true }
hmac = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
    "multipart",
    "json",
    "rustls-tls",
] }
uuid = { workspace = true, features = ["v4", "fast-rng", "macro-diagnostics"] }

jsonwebtoken = "9.3.0"
bcrypt = "0.15.0"
futures-util = "0.3.30"
rdkafka = { version = "0.36.2", optional = true }
influxdb = { version = "0.7.1", features = ["derive"], optional = true }
md-5 = "0.10.6"

[target.'cfg(windows)'.dependencies]
wmi = "0.13.3"
winreg = "0.52.0"

[features]
default = []
kafka = ["rdkafka"]
influx = ["influxdb"]
