[package]
name = "webbase"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["AsEuler <aseuler@outlook.com>"]
publish = true

[dependencies]
tracing = "0.1.37"
anyhow = "1.0.72"
chrono = "0.4.37"
lazy_static = "1.4.0"
time = { version = "0.3.23", features = ["macros"] }
sea-orm = { version = "1.0.1", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
] }
fred = "9.1.2"
redis = { version = "0.26.1", features = ["tokio-rustls-comp", "json"] }
redlock = "2.0.0"
futures = "0.3.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
actix-web = "4.8.0"
actix-http = "3.8.0"
regex = { version = "1.9", default-features = false, features = ["std"] }
dashmap = "6.0.1"
directories = "5.0.1"
sysinfo = "0.32.0"
whoami = "1.4.1"
hmac = "0.12.1"
reqwest = { version = "0.12.5", default-features = false, features = [
    "multipart",
    "json",
    "rustls-tls",
    "blocking",
] }
uuid = { version = "1.10.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
jsonwebtoken = "9.3.0"
bcrypt = "0.15.0"
futures-util = "0.3.30"
rdkafka = { version = "0.36.2", optional = true }
influxdb = { version = "0.7.1", features = ["derive"], optional = true }
md-5 = "0.10.6"

[target.'cfg(windows)'.dependencies]
wmi = "0.14.0"
winreg = "0.52.0"

[features]
default = []
kafka = ["rdkafka"]
influx = ["influxdb"]
